--- a/styles/login.css
+++ b/styles/login.css
@@ -254,6 +254,93 @@ h5~div{
     margin-left: 5%;
     margin-top: 50px;
 }
+#top{
+    margin-bottom: 50px;
+}
+#end{
+    margin-top: 50px;
+}
+#log{
+    width: 42%;
+    height: 600px;
+    /* border: 1px solid red; */
+    margin: auto;
+    background:url('https://in.sugarcosmetics.com/Login_bg.svg');
+}
+#login_headinh>h3{
+    color: #fff;
+    font-size: 24px;
+    font-weight: 600;
+    margin-left: 30px;
+}
+#login_box{
+    width: 90%;
+    height: 60%;
+    background-color: white;
+    margin: auto;
+    /* border: 1px solid red; */
+}
+#login_box_heading{
+    width: 90%;
+    height: 30px;
+    /* border: 1px solid blue; */
+    margin: auto;
+    margin-top: 20px;
+    display: flex;
+}
+#headin1{
+    font-size: 24px;
+    margin-left: 10px;  
+    font-weight:500;
+}
+  /*input css  */
+#email_phone,#password{
+    width: 80%;
+    height: 50px;
+    font-size: 20px;
+    margin-left: 50px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: #e68ee3;  
+    margin-top: 25px;
+    text-align: center;
+}
+#loginBtn,#signinBtn{
+    width: 80%;
+    margin-left: 50px;
+    margin-top: 50px;
+    height: 50px;
+    background-color: #fdaac9;
+    border: none;
+
+}
+
+#log_reg{
+    display: flex;
+}
+#SignupEmail,#SignupPhone,#SignupPassword{
+    width: 80%;
+    height: 50px;
+    font-size: 20px;
+    margin-left: 50px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-color: #e68ee3;  
+    margin-top: 25px;
+    text-align: center;
+}
+#signinBox{
+    width: 90%;
+    height: 70%;
+    background-color: white;
+    margin: auto;
+    padding-top: 5px;
+    /* border: 1px solid red; */
+}
+ 
+ 
 
 
 
