--- a/styles/index.css
+++ b/styles/index.css
@@ -335,6 +335,7 @@ h5~div{
     box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     text-align: center;
     margin-top: 50px;
+    cursor: pointer;
 }
 .pic{
     width: 185px;
