--- a/styles/addtocart.css
+++ b/styles/addtocart.css
@@ -42,7 +42,7 @@
     border-radius: 20px;
     box-shadow: rgba(121, 38, 38, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
 }
-.class{
+.order{
     margin-top: 10px;
     color: #575555;
     font-size: 16px;
