--- a/styles/payment.css
+++ b/styles/payment.css
@@ -11,14 +11,19 @@
 }
 #leftbox{
     width: 55%;
-    height: 100%;
+    height: auto;
+    box-shadow: rgba(121, 38, 38, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     /* border: 1px solid red; */
 }
 #rightbox{
     width: 45%;
     height:auto;
+    box-shadow: rgba(121, 38, 38, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
     /* border: 1px solid blue; */
     margin-top: 2%;
+    margin-left: 2%;
+    background-color: #f5f5f5;
+    border-radius: 2%;
 }
 .firstbox{
     width: 100%;
